--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edg" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="icon" type="image/x-icon" href="/pages/favicon (1).ico">
+    <link rel="icon" type="image/x-icon" href="pages/favicon (1).ico"> 
+    <link rel="stylesheet" href="css/style.css" />
 </head>
-<link rel="stylesheet" href="css/style.css" />
+
 <body>
     <div id="admin-box">
         <h1 class="head">Login Page</h1>
